Update WorkerAddMaFileState.java